defis-Boutkrida-Ben-Geloune-Zedang/defi6/templates/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: back-service
  name: back-service
spec:
  ports:
  - name: 80-8000
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: back
status:
  loadBalancer: {}
