defis-Boutkrida-Ben-Geloune-Zedang/defi6/templates/ingress-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-proxy
  namespace: u-tbmdn
spec:
  rules:
  - http: 
      paths:
      - backend:
          service:
            name: front-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: back-service
            port:
              number: 80
        path: /api
        pathType: Prefix
status:
  loadBalancer: {}
